<resources>
    <string name="app_name">Bluetooth</string>
    <string name="init_btn">Init BlueTooth</string>
    <string name="enum_btn">Enum BlueTooth</string>
    <string name="cmdLabel">Command to send:</string>
    <string name="recvLabel">Data received:</string>
    <string name="send_btn">Send Command</string>
    <string name="recv_btn">Receive Data</string>
    <string name="auto_recv_btn">Auto Send</string>
    <string name="stop_recv_btn">Stop Auto</string>
    <string name="filterHint">Filter: device_name[####device_address]</string>
    <string name="cmd_getlist_btn">GetList</string>
    <string name="cmd_enroll_btn">Enroll</string>
    <string name="cmd_getstate_btn">GetState</string>
    <string name="cmd_verify_btn">Verify</string>
    <string name="cmd_delete_btn">Delete</string>
    <string name="cmd_calib_btn">Calibration</string>
    <string name="cmd_abort_btn">AbortFP</string>
    <string name="test_jni_btn">testJNI(Enum)</string>
    <string name="test_connect_btn">testJNI(Open)</string>
    <string name="btn_getdevinfo">GetDevInfo</string>
    <string name="btn_initpin">InitPIN</string>
    <string name="btn_verifypin">VerifyPIN</string>
    <string name="btn_changepin">ChangePIN</string>
    <string name="btn_getfplist">GetFPList</string>
    <string name="btn_enrollfp">EnrollFP</string>
    <string name="btn_verifyfp">VerifyFP</string>
    <string name="btn_deletefp">DeleteFP</string>
    <string name="btn_format">Format</string>
    <string name="btn_genseed">GenSeed</string>
    <string name="btn_ethsign">ETHSgin</string>
    <string name="btn_eossign">EOSSgin</string>
    <string name="btn_cybsign">CYBSgin</string>
    <string name="btn_importmne">ImportMNE</string>
    <string name="btn_getaddress">GetAdress</string>
    <string name="btn_freeContext">FreeContext</string>
    <string name="btn_freeContextAndShutDown">PowerOff</string>
    <string name="btn_clear_screen">ClearScreen</string>
    <string name="btn_calibrate">CalibrateFP</string>
    <string name="btn_abort">Abort</string>
    <string name="btn_get_checkcode">GetCheckCode</string>
    <string name="btn_clearCOS">ClearCOS</string>
    <string name="btn_writeSN">WriteSN</string>
    <string name="edit_sn">Please input Serial Number</string>
    <string name="test_hid_btn">TestHid</string>
    <string name="btn_start_scan">Scan Device</string>
    <string name="edit_pin">Please input PIN</string>
    <string name="edit_new_pin">Please input new PIN</string>
    <string name="tab_item_device">Device</string>
    <string name="tab_item_fp">FPrint</string>
    <string name="tab_item_init">Init</string>
    <string name="tab_item_wallet">Wallet</string>
    <string name="text_dev_state">PowerSource:Unknown, PowerLevel:Unknown</string>
    <string name="text_dev_state_format">PowerSource:%s, PowerLevel:%s</string>
    <string name="btn_mne2seed">RecoverSeed</string>
    <string name="btn_seed2addr">RecoverAddr</string>
    <string name="edit_mnes">Please input mnemonics</string>
    <string name="edit_seed">Please input seed</string>
    <string name="btn_import_image">ImportImg</string>
    <string name="btn_clear_image">ClearImg</string>
    <string name="btn_show_image">ShowImg</string>
    <string name="btn_show_image0">ShowImg0</string>
    <string name="btn_set_logo">SetLogo</string>
    <string name="btn_restore_logo">ResetLogo</string>
    <string name="btn_set_image_name">SetIName</string>
    <string name="btn_get_image_name">GetIName</string>
    <string name="btn_get_image_count">GetICount</string>
    <string name="edit_image_name">Please Input Image Name</string>
    <string name="btn_eos_serialize">EOS Ser</string>
    <string name="btn_test_fp">测试1</string>
    <string name="btn_test_screen">测试2</string>
    <string name="btn_test_calibrate">校正传感器</string>
    <string name="tab_item_product_test">指纹卡测试</string>
    <string name="btn_test_freeContextAndShutDown">断开设备</string>
    <string name="btn_update_cos">UpdateCOS</string>
    <string name="btn_get_fw_version">GetFWVersion</string>
    <string name="text_set_tx">Processing transaction data</string>
    <string name="tab_sign_item_fp">FingerPrint</string>
    <string name="tab_sign_item_pin">PIN</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_login">Login</string>
    <string name="btn_test_abort">中断测试</string>
    <string name="btn_import_bmp">ImportBMP</string>
    <string name="btn_abortButton">AbortButton</string>
    <string name="btn_abortSign">AbortSign</string>
    <string name="btn_get_battery">GetBattery</string>
    <string name="btn_erc20sign">ERC20Sign</string>
    <string name="btn_etcsign">ETCSign</string>
    <string name="btn_btcsign">BTCSign</string>
</resources>
