<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content">
    <TableRow android:gravity="center">
        <Button
            android:id="@+id/btn_getaddress"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_getaddress"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_ethsign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_ethsign"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_erc20sign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_erc20sign"
            android:textAllCaps="false" />
    </TableRow>
    <TableRow android:gravity="center">
        <Button
            android:id="@+id/btn_eossign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_eossign"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_cybsign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_cybsign"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_etcsign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_etcsign"
            android:textAllCaps="false" />
    </TableRow>
    <TableRow android:gravity="center">
        <Button
            android:id="@+id/btn_btcsign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_btcsign"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_get_checkcode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_get_checkcode"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_abortSign"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_abortSign"
            android:textAllCaps="false" />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn_mne2seed"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_mne2seed"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_seed2addr"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_seed2addr"
            android:textAllCaps="false" />
        <Button
            android:id="@+id/btn_eos_serialize"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_eos_serialize"
            android:textAllCaps="false" />
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/btn_abortButton"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/btn_abortButton"
            android:textAllCaps="false" />
    </TableRow>
</TableLayout>